--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -83,6 +83,10 @@
     position: sticky;
     top: 0;
 
+    ~ .sidebar-inner-nav {
+      margin-top: 2.5rem;
+    }
+
     @media screen and (max-width: $screen-md) {
       height: unset;
       margin-top: unset;
